# library-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
app/: database.py  di_container.py  main.py  settings.py
app/api/: routes.py
app/api/endpoints/: book.py  review.py  user.py
app/api/schemas/: book.py  review.py  shared.py  user.py
app/entities/: base.py  book.py  review.py  user.py
app/exceptions/: __init__.py
app/repositories/: base.py
app/services/: book.py  review.py  user.py
app/utils/: pagination.py
infrastructure/alembic/: env.py
infrastructure/docker/: Dockerfile
tests/: __init__.py
tests/factories/: base.py  factory_session_state.py
tests/integration/: conftest.py
tests/integration/api/: test_routes.py
